--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.17",
     "@lottiefiles/lottie-player": "^1.4.0",
     "@react-native-google-signin/google-signin": "^7.0.0-alpha.3",
     "cra-template": "1.1.2",
     "firebase": "^9.1.0",
+    "font-awesome": "^4.7.0",
     "javascript-time-ago": "^2.3.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
